tests/paczka1/fuzzy1/15344772.err
Error in line 4: A768 A240 28,9
Error in line 25: KR5kpT A504 66,8
Error in line 23: LZ2j1ZFnFz2 A768 47,1
Error in line 31: vzGkekb2 A240 -2,9
Error in line 34: A768 A240 98,6
Error in line 37: A768 A504 5,4
Error in line 36: Jz9lOMxtm1 A240 98,5
